server/backend: add logic for state confirmation and improve behavior on state updates
store and handle local and gate timestamps separately. Only update the gate state based on the sensor reading (avoid oscillations due to reports), only add events for new seen reports.